{
  "@@locale": "pt",
  "appTitle": "Eu Sou",
  "@appTitle": {
    "description": "O título da aplicação"
  },
  "welcome": "Bem-vindo",
  "@welcome": {
    "description": "Mensagem de boas-vindas"
...
    "description": "Mensagem exibida quando não há versículos marcados"
  },
  "noSearchHistory": "Seu histórico de pesquisa está vazio.",
  "@noSearchHistory": {
    "description": "Mensagem exibida quando o histórico de pesquisa está vazio"
  },
  "bible": "Bíblia",
  "@bible": {
    "description": "Etiqueta da barra inferior da Bíblia"
  },
  "search": "Pesquisar",
  "@search": {
    "description": "Etiqueta da barra inferior de pesquisa"
...
